Bug 783383 - Add null-checks for nsBaseWidget::mWidgetListener r=tn